# kapti

./: .gitignore  MANIFEST.in  kapti  pkgcmd.py  pkgmanager.py  pkgutils.py  progressview.py  setup.cfg
kapti/: main.py  pkgcmd.py  pkgmanager.py  progressview.py
kapti/templates/: info.html  install-remove-button.html
templates/: base.html  info.html  screenshot.html  search.html  welcome.html
