[metadata]
name = kapti
version = attr: kapti.__version__
description = Minimalist but user-friendly Qt-based package manager for apt-based distributions
long_description = file: README.md
long_description_content_type = text/markdown
author = Aurélien Gâteau
author_email = mail@agateau.com
license = GPL 3.0
platforms = any
url = https://github.com/agateau/kapti
keywords = qt, apt, packagemanager
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Installation/Setup

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    # This does not look like it's available on pypi.org :/
    python-apt
    PyQt5
    PyQtWebEngine
    jinja2

[bdist_wheel]
universal = 1

[options.entry_points]
gui_scripts =
    kapti = kapti.main:main
    pkgcmd = kapti.pkgcmd:main

[options.package_data]
kapti = templates/*.html
